@@ -199,8 +199,18 @@ equivalent:
    class ProjectsController < InheritedResources::Base
      def destroy
        destroy! do |format|
-         format.html { redirect_to projects_url }
+         format.html { redirect_to root_url }
        end
+     end
+   end
+
+Even more, since most of the times that you change a :create, :update or :destroy
+action is because you want to to change to where it redirects, a shortcut is
+provided. So you can do:
+
+   class ProjectsController < InheritedResources::Base
+     def destroy
+       destroy!(root_url)
      end
    end
 
